# xp11A350AutoTaxi

./: ARRIVAL_SPIN_GUARD_FIX_NOTE.md  BUILD_FIX_NOTE.md  CMakeLists.txt  CONTROL_FIX_NOTE.md  DIRECTION_SIGN_FIX_NOTE.md  DYNAMIC_THROTTLE_DROPDOWN_FIX_NOTE.md  EARLY_TURN_DAMPING_FIX_NOTE.md  EARLY_TURN_TAKEOVER_FIX_NOTE.md  FAST_STEER_SLATS_FIX_NOTE.md  FULLSTEER_50M_STANDARD_FIX_NOTE.md  FULL_STEER_RUNWAY_ALIGN_FIX_NOTE.md  LOAD127_FIX_NOTE.md  MICRO_ANTICIPATE_RETURN_FIX_NOTE.md  MICRO_PREZERO_DIRECT_STEER_FIX_NOTE.md  ONE_PASS_90_TURN_FIX_NOTE.md  PID_ROUTE_TRACKING_FIX_NOTE.md  PREDICTIVE_XTE_LEAD_FIX_NOTE.md  README.md  SCAN_AND_GSX_CHANGES.md  STEER100_FAST_CAPTURE_NOTE.md  STEER_FCTL_FIX_NOTE.md  TIGHT_TURN_RADIUS_FIX_NOTE.md  TRACK_COURSE_PREZERO_FIX_NOTE.md  UI_INPUT_AND_TAXI_FIX_NOTE.md  XTE_CORRIDOR_SWAY_FIX_NOTE.md
plugin/: A350AutoTaxi.ini
src/: AptDatParser.cpp  AptDatParser.h  AutoTaxi.cpp  AutoTaxi.h  AutoTaxiUI.cpp  AutoTaxiUI.h  Config.cpp  Config.h  Geo.cpp  Geo.h  Plugin.cpp
